<resources>
    <string name="app_name">Wumbo</string>
    <string name="app_intro">WumboIntro</string>
    <string name="action_settings">Settings</string>
    <string name="message_hint">Write Message Here</string>
    <string name="public_name">Wumbo</string>
    <string name="public_uuid">1a27c5da-0d6e-4f66-9224-67ae564986ec</string>
    <string name="public_secret_key">COPUZ4eSwN2IzjH5EtNlhA==</string>
    <string name="intro_title">Display Name</string>
    <string name="prompt_name">Select your display name!</string>
    <string name="default_name">Anonymous</string>
    <string name="prompt_continue">Continue</string>
    <string name="image_message_error">Cannot load image</string>
    <string name="add_channel_label">Add a new channel</string>
    <string name="invite_label">Invite to channel</string>
    <string name="read_ext_perm_denied">Cannot load images, permission denied</string>
    <string name="continue_desc">Continue</string>
    <string name="send_desc">Send</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="channel_name_prompt">New Channel Name:</string>
    <string name="default_channel_name">New Channel</string>
    <string name="contacts_name_prompt">Select contacts to add:</string>
</resources>
