<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.star.patrick.wumbo.view.IntroActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryLight"
        tools:context="com.star.patrick.wumbo.view.IntroActivity">

        <RelativeLayout
            android:id="@+id/intro_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:paddingBottom="100dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    android:paddingBottom="25dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/prompt_name" />

                <EditText
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_name"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:maxLines="1">
                    <requestFocus />
                </EditText>

                <ImageButton
                    android:id="@+id/continue_button"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/circle_button_size"
                    android:layout_height="@dimen/circle_button_size"
                    android:src="@drawable/ic_arrow_forward_white_24dp"
                    android:background="@drawable/round_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:elevation="4dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:contentDescription="@string/continue_desc" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>