<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.star.patrick.wumbo.view.IntroActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryLight"
        tools:context="com.star.patrick.wumbo.view.IntroActivity">

        <LinearLayout
            android:id="@+id/intro_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/channel_name_prompt" />

            <EditText
                android:id="@+id/channel_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_channel_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:maxLines="1">
                <requestFocus/>
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/contacts_name_prompt" />

            <ListView android:id="@+id/contact_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:background="@android:color/transparent" />

            <ImageButton
                android:id="@+id/continue_creating_channel_button"
                android:layout_gravity="center"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_arrow_forward_white_24dp"
                android:background="@drawable/round_button"
                android:elevation="4dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>